--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(THIS_FUCKING_BULLSHIT C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(THIS_FUCKING_BULLSHIT main.c)
+add_executable(THIS_FUCKING_BULLSHIT parser.tab.c lex.yy.c ast.c output.c string_utils.c)
