--- a/Makefile.win
+++ b/Makefile.win
@@ -1,6 +1,6 @@
 all: include/ast.h src/ast.c include/output.h src/output.c include/string_utils.h src/string_utils.c parser.y tokenizer.l
 	make clean
-	make aql_parser
+	make program
 	make run
 
 aql_parser: src/ast.c src/output.c src/string_utils.c
@@ -12,5 +12,5 @@ run:
 	./aql_parser
 
 clean:
-	rm -f aql_parser lex.yy.c parser.tab.c parser.tab.h
+	del -f aql_parser lex.yy.c parser.tab.c parser.tab.h
 
